# dweb_cloud

./: .dockerignore  .gitignore  AGENTS.md  CHAT.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  compose.yml  package.json
.github/workflows/: publish-docker.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: apps.json  plans.json
crates/identity-core/: Cargo.toml
crates/identity-core/src/: lib.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: lib.rs
infra/: 2fa-webdav.md  README.md  compose.caddy.yml.example  production-deploy.md
infra/caddy/: Caddyfile.compose.example  Caddyfile.example
infra/nginx/: dweb-cloud.conf.example
scripts/: publish-docker.sh  smoke-public-webdav.sh
server/: Cargo.toml
server/src/: main.rs
specs/: 01-vision-and-goals.md  02-product-model.md  03-storage-and-webdav-spec.md  04-auth-token-and-billing-spec.md  05-2fa-integration-spec.md  06-engineering-quality-and-release-spec.md  07-deployment-and-operations-spec.md  08-user-self-service-spec.md  09-operator-and-commercial-spec.md  10-developer-mode-spec.md  README.md
