[workspace]
members = [
  "server",
  "cli",
  "crates/identity-core",
  "crates/storage-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
bip39 = { version = "2", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
dav-server = "0.8.0"
dav-server-opendalfs = "0.7.0"
ed25519-dalek = "2.2"
getrandom = "0.2"
hex = "0.4"
http = "1"
opendal = { version = "0.55.0", default-features = false, features = ["services-fs", "executors-tokio"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }
