[package]
name = "dweb-cloud-storage-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
